--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -38,9 +38,9 @@
     
     <h4>social media platform</h4>
     <ul>
-        <a href="Https://WWW.instagram.com">_artfinness254</a>
-        <a href="Https://www.Github.com">_emanikor</a>
-        <a href="Https://WWW.gmail.com">_corneliusekai72@gmail.com</a>
+        <a href="Https://WWW.instagram.com">_artfinness254&copy;</a>instagram</li>
+        <a href="Https://www.Github.com">_emanikor&copy;</a>github</li>
+        <a href="Https://WWW.gmail.com">_corneliusekai72@gmail.com&copy;</a>gmail</il>
     </ul>
 </footer>
 <img src="IMG_9910.JPG" alt="" srcset="">
