--- a/about.html
+++ b/about.html
@@ -9,12 +9,12 @@
 <body>
     <!--Navigation bar-->
     <nav>
-       <a href="HOME.HTML">home</a>
-       <a href="PROJECTS.HTML">project</a>
-       <a href="SERVICES.HTML">services</a>
-        <a href="ABOUT.HTML">about</a>
-        <a href="BLOG.HTML">blog</a>
-        <a href="CONTACT.HTML">contact</a>
+       <a href="projects.html">projects</a>
+            <a href="services.html">services</a>
+            <a href="About.html">About</a>
+            <a href="Blog.html">blog</a>
+            <a href="Contact.html">Contact</a>
+            <a href="resume.html">resume</a>
     </nav>
     <!--hero section-->
     <header>
