--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <nav>
        <a href="projects.html">projects</a>
             <a href="services.html">services</a>
-            <a href="About.html">About</a>
+            <a href="index.html">index</a>
             <a href="Blog.html">blog</a>
             <a href="Contact.html">Contact</a>
             <a href="resume.html">resume</a>
