--- a/about.html
+++ b/about.html
@@ -9,12 +9,11 @@
 <body>
     <!--Navigation bar-->
     <nav>
-       <a href="projects.html">projects</a>
-            <a href="services.html">services</a>
-            <a href="index.html">index</a>
-            <a href="Blog.html">blog</a>
-            <a href="Contact.html">Contact</a>
-            <a href="resume.html">resume</a>
+         <a href="home.html">home</a>
+       <a href="proect.html">project</a>
+       <a href="services.html">services</a>
+        <a href="blog.html">blog</a>
+        <a href="contact.html">contact</a>
     </nav>
     <!--hero section-->
     <header>
