--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
             <a href="projects.html">projects</a>
             <a href="services.html">services</a>
             <a href="About.html">About</a>
+            <a href="home.html">home</a>
             <a href="Blog.html">blog</a>
-            <a href="Contact.html">Contact</a>
             <a href="resume.html">resume</a>
         </nav>
     </nav>
