--- a/about.html
+++ b/about.html
@@ -1,20 +1,32 @@
+ <!--
+    Author: cornelius Emanikor Ekai
+    Date: 10/9/2021
+    license: MIT
+    Article: this is all about my website page.
+    In this page you will be able to get some of the technologies i have worked with 
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/34cd652825.js" crossorigin="anonymous"></script>
     <title>about</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <!--Navigation bar-->
-    <nav>
-         <a href="home.html">home</a>
-       <a href="proect.html">project</a>
-       <a href="services.html">services</a>
-        <a href="blog.html">blog</a>
-        <a href="contact.html">contact</a>
-    </nav>
+    <nav class="navbar">
+        <a href=""></a>
+       <a href="home.html"class="fas fa-home fa-1x">home</a><br>
+       <i><a href="proect.html"i class="fas fa-tasks fa-1x">project</i></a><br>
+       <a href="services.html"i class="fab fa-servicestack fa-1x">services</a><br>
+       <a href="about.html"i class="fas fa-address-card fa-1x">about</a><br>
+        <a href="blog.html"i class="fas fa-blog fa-1x">blog</a><br>
+        <a href="contact.html"i class="far fa-address-book fa-1x">contact</a>
+        <a href="resume.hmtl "i class="fas fa-file fa-1x">resume</a>
+    </nav> 
     <!--hero section-->
     <header>
         <img src="download.jpg" alt="">
@@ -53,13 +65,16 @@
         </table>
     </main>
     <!--footer section-->
-    <footer>
-        <ul>
-           <li><a href="Https://WWW.instagram.com">_artfinness254&copy;</a>instagram</li>
-            <li><a href="Https://www.Github.com">_emanikor&copy;</a>github</li>
-           <li><a href="Https://WWW.gmail.com">_corneliusekai72@gmail.com&copy;</a>gmail</li>
-           <li><a href="Https://WWW.twitter.com">em_conny&copy;</a>twitter</li>
-        </ul>
-    </footer>
+    <div class="footer">
+        <footer>
+        <h4>social media platforms</h4>
+            <a href="Https://WWW.instagram.com"><i class="fab fa-instagram-square fa-2x"></i></a>
+            <a href="Https://www.Github.com"><i class="fab fa-github fa-2x"></i></a>
+           <a href="Https://WWW.gmail.com"><i class="far fa-envelope fa-2x"></i></a>
+          <a href="https://www.linkin.com"><i class="fab fa-linkedin-in fa-2x"></i></a>
+           <a href="Https://WWW.twitter.com"><i class="fab fa-twitter-square fa-2x"></i> </a>
+        
+           </footer>
+    </div>
 </body>
 </html>
