--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+
     <!--
     Author: cornelius Emanikor Ekai
     Date: 10/9/2021
@@ -22,46 +14,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="lab(29.2345% 39.3825 20.0664)">
+    <script src="https://kit.fontawesome.com/34cd652825.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/main.css">
+
     <title>CORNELIUS EKAI(PORTFOLIO)</title>
 </head>
 <body>
     <!--Navigation bar-->
-    <nav>
-        <a href="home.html">home</a>
-       <a href="proect.html">project</a>
-       <a href="services.html">services</a>
-        <a href="about.html">about</a>
-        <a href="blog.html">blog</a>
-        <a href="contact.html">contact</a>
+    <nav class="navbar">
+        <a href=""></a>
+       <a href="home.html"class="fas fa-home">home</a><br>
+       <i><a href="proect.html"i class="fas fa-tasks">project</i></a><br>
+       <a href="services.html"i class="fab fa-servicestack">services</a><br>
+       <a href="about.html"i class="fas fa-address-card">about</a><br>
+        <a href="blog.html"i class="fas fa-blog">blog</a><br>
+        <a href="contact.html"i class="far fa-address-book">contact</a>
+        <a href="resume.hmtl "i class="fas fa-file">resume</a>
     </nav>
-<!--hero section--> <hr>
-<img src="download.jpg" alt="" srcset="">
+<!--hero section--> 
+<hr>
+<img src="download.jpg" alt="" width="300" height="300">
 <p>
-Hello world!!!!!!!!!welcome to my website
-<h3>professional description</h3>
+Hello world! welcome to my website
 </p>
     <header>
     PORTFOLIO
+    websitepage<br>
 </header>
-<!--main section-->
-<main>
+<is>
+    
 <!--jumbotron-->
-Cornelius ekai is a programmer based both in software developer and website developer
-because of hardwork and doing alot of research i gain skills and found my self able to come up with several website and software projects.
-Currently i have familiarized with other programming language such as;css,json,C++,xml,php and java script.<br>
+
+<h3>professional description</h3><br>
+Cornelius ekai is a programmer based both in software developer and website developer<br>
+because of hardwork and doing alot of research i gain skills and found my self able to come up with several <br>website and software projects.
+Currently i have familiarized with other programming language such as;<em>css,json,C++,xml,php and java script</em>.<br>
 programming is wonderfull career one can be able to come up with programms and develop a website and also a software.
 </main>
 <!--footer section-->
-<footer>
-    
-    <h4>social media platform</h4>
-    <ul>
-        <a href="Https://WWW.instagram.com">_artfinness254&copy;</a>instagram</li><br>
-        <a href="Https://www.Github.com">_emanikor&copy;</a>github</li><br>
-        <a href="Https://WWW.gmail.com">_corneliusekai72@gmail.com&copy;</a>gmail</il><br>
-    </ul>
-</footer>
-</body>
+<div class="footer">
+    <footer>
+        <h4><strong>social media platforms</strong></h4>
+           <a href="Https://WWW.instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
+           <a href="Https://www.Github.com"><i class="fab fa-github fa-2x"></i></a>
+           <a href="Https://WWW.gmail.com"><i class="far fa-envelope fa-2x"></i></a>
+           <a href="https://www.linkin.com"><i class="fab fa-linkedin-in fa-2x"></i></a>
+           <a href="Https://WWW.twitter.com"><i class="fab fa-twitter fa-2x"></i></a>
+    </footer>
+</div>
 </html>
 </body>
 </html>
