--- a/contact.html
+++ b/contact.html
@@ -1,25 +1,38 @@
+ <!--
+    Author: cornelius Emanikor Ekai
+    Date: 10/9/2021
+    license: MIT
+    Article: this is all about my website page.
+    this page entails how you can reach me through contacts and email
+    andy offers are available only have to subscribe to it
+    
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://kit.fontawesome.com/34cd652825.js" crossorigin="anonymous"></script>
+     <title>contact forms</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
-          <!--navigation section-->
-    <nav>
-        <nav>
-            <a href="projects.html">projects</a>
-            <a href="services.html">services</a>
-            <a href="About.html">About</a>
-            <a href="home.html">home</a>
-            <a href="Blog.html">blog</a>
-            <a href="resume.html">resume</a>
-        </nav>
-    </nav>
+       <!--Navigation bar-->
+    <nav class="navbar">
+        <a href=""></a>
+       <a href="home.html"class="fas fa-home">home</a><br>
+       <i><a href="proect.html"i class="fas fa-tasks">project</i></a><br>
+       <a href="services.html"i class="fab fa-servicestack">services</a><br>
+       <a href="about.html"i class="fas fa-address-card">about</a><br>
+        <a href="blog.html"i class="fas fa-blog">blog</a><br>
+        <a href="contact.html"i class="far fa-address-book">contact</a>
+        <a href="resume.hmtl "i class="fas fa-file">resume</a>
+    </nav> 
     <!--jumbotron-->
-        <img src="download.jpg" alt="" srcset="">
+        <img src="download.jpg" alt=""width="300" height="400" srcset="">
         <p>
             in the past 2 years after attaining my bachelor in IT i have been helping company company's n create solution ithrough web aplications.am currently pursuing masters 
             in IT
@@ -89,13 +102,14 @@
     </main>
        
 <!--footer section-->
-<footer>
-    <ul>
-       <li><a href="Https://WWW.instagram.com">_artfinness254&copy;</a>instagram</li>
-        <li><a href="Https://www.Github.com">_emanikor&copy;</a>github</li>
-       <li><a href="Https://WWW.gmail.com">_corneliusekai72@gmail.com&copy;</a>gmail</li>
-       <li><a href="Https://WWW.twitter.com">em_conny&copy;</a>twitter</li>
-    </ul>
-
+<div class="footer">
+    <footer>
+    <h2>social media platforms</h2>
+       <a href="Https://WWW.instagram.com"><i class="fab fa-instagram-square fa-2x" ></i></a>
+        <a href="Https://www.Github.com"><i class="fab fa-github fa-2x"></i></a>
+       <a href="Https://WWW.gmail.com"><i class="far fa-envelope fa-2x"></i></a>
+      <a href="https://www.linkin.com"><i class="fab fa-linkedin-in fa-2x"></i></a>
+       <a href="Https://WWW.twitter.com"><i class="fab fa-twitter-square fa-2x"></i> </a>
+       </footer>
 </body>
 </html>
