--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--Navigation bar-->
     <nav class="navbar">
         <a href=""></a>
-       <a href="home.html"class="fas fa-home">home</a><br>
+       <a href="home.html"class="fas fa-home"><stron>home</stron></a><br>
        <i><a href="proect.html"i class="fas fa-tasks">project</i></a><br>
        <a href="services.html"i class="fab fa-servicestack">services</a><br>
        <a href="about.html"i class="fas fa-address-card">about</a><br>
@@ -34,7 +34,7 @@
     </nav>
 <!--hero section--> 
 <hr>
-<img src="download.jpg" alt="" width="300" height="300">
+<img src="images.jpg" alt="" width="300" height="300">
 <p>
 Hello world! welcome to my website
 </p>
@@ -55,12 +55,15 @@ programming is wonderfull career one can be able to come up with programms and d
 <!--footer section-->
 <div class="footer">
     <footer>
-        <h4><strong>social media platforms</strong></h4>
+        <h4><strong>social media platforms</strong></h4><br>
            <a href="Https://WWW.instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
            <a href="Https://www.Github.com"><i class="fab fa-github fa-2x"></i></a>
            <a href="Https://WWW.gmail.com"><i class="far fa-envelope fa-2x"></i></a>
            <a href="https://www.linkin.com"><i class="fab fa-linkedin-in fa-2x"></i></a>
            <a href="Https://WWW.twitter.com"><i class="fab fa-twitter fa-2x"></i></a>
+           <p>&copy;2021 all reseverd &trade;cornelius emanikor</p>
+
+
     </footer>
 </div>
 </html>
