--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
         <a href="resume.hmtl "i class="fas fa-file">resume</a>
     </nav> 
     <!--jumbotron-->
-        <img src="download.jpg" alt=""width="300" height="400" srcset="">
+        <img src="images.jpg" alt=""width="600" height="400">
         <p>
             in the past 2 years after attaining my bachelor in IT i have been helping company company's n create solution ithrough web aplications.am currently pursuing masters 
             in IT
@@ -109,7 +109,10 @@
         <a href="Https://www.Github.com"><i class="fab fa-github fa-2x"></i></a>
        <a href="Https://WWW.gmail.com"><i class="far fa-envelope fa-2x"></i></a>
       <a href="https://www.linkin.com"><i class="fab fa-linkedin-in fa-2x"></i></a>
-       <a href="Https://WWW.twitter.com"><i class="fab fa-twitter-square fa-2x"></i> </a>
+       <a href="Https://WWW.twitter.com"><i class="fab fa-twitter-square fa-2x"></i> </a><br>
+
+<p>&copy;2021 all reseverd &trade;cornelius emanikor</p>
+
        </footer>
 </body>
 </html>
