--- a/contact.html
+++ b/contact.html
@@ -103,15 +103,15 @@
        
 <!--footer section-->
 <div class="footer">
-    <footer>
+    <footer>0.++
     <h2>social media platforms</h2>
        <a href="Https://WWW.instagram.com"><i class="fab fa-instagram-square fa-2x" ></i></a>
         <a href="Https://www.Github.com"><i class="fab fa-github fa-2x"></i></a>
        <a href="Https://WWW.gmail.com"><i class="far fa-envelope fa-2x"></i></a>
       <a href="https://www.linkin.com"><i class="fab fa-linkedin-in fa-2x"></i></a>
-       <a href="Https://WWW.twitter.com"><i class="fab fa-twitter-square fa-2x"></i> </a><br>
+       <a href="Https://WWW.twitter.com"><i class="fab fa-twitter-square fa-2x"></i> </a>
 
-<p>&copy;2021 all reseverd &trade;cornelius emanikor</p>
+<p>&copy;2021 allreseverd$trade;cornelius emanikor</reserved1></p>
 
        </footer>
 </body>
