--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </nav>
 <!--hero section--> 
 <hr>
-<img src="images.jpg" alt="" width="300" height="300">
+<img src="" alt="" width="300" height="300">
 <p>
 Hello world! welcome to my website
 </p>
