--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
     <!--
     Author: cornelius Emanikor Ekai
+    project: project porfolio
     Date: 10/9/2021
     license: MIT
     Article: this is all about my website page.
@@ -34,7 +35,7 @@
     </nav>
 <!--hero section--> 
 <hr>
-<img src="" alt="" width="300" height="300">
+<img src="download.jpg" alt="" width="300" height="300">
 <p>
 Hello world! welcome to my website
 </p>
