--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <!--Navigation bar-->
     <nav class="navbar">
       
-       <a href="home.html"class="fas fa-home"><stron>home</stron></a><br>
-       <i><a href="proect.html"i class="fas fa-tasks">project</i></a><br>
-       <a href="services.html"i class="fab fa-servicestack">services</a><br>
-       <a href="about.html"i class="fas fa-address-card">about</a><br>
-        <a href="blog.html"i class="fas fa-blog">blog</a><br>
-        <a href="contact.html"i class="far fa-address-book">contact</a>
-        <a href="resume.hmtl "i class="fas fa-file">resume</a>
+       <a href="home.html"class="fas fa-home">home</a><br>
+       <a href="project.html"class="fas fa-tasks">project</a><br>
+       <a href="services.html"class="fab fa-servicestack">services</a><br>
+       <a href="about.html"class="fas fa-address-card">about</a><br>
+       <a href="blog.html"class="fas fa-blog">blog</a><br>
+       <a href="contact.html"class="far fa-address-book">contact</a>
+       <a href="resume.hmtl "class="fas fa-file">resume</a>
     </nav>
 <!--hero section--> 
 <hr>
@@ -43,7 +43,6 @@ Hello world! welcome to my website
     PORTFOLIO
     websitepage<br>
 </header>
-<is>
     
 <!--jumbotron-->
 <div id="project">
@@ -89,11 +88,12 @@ Hello world! welcome to my website
     </article>
 
 <h3>professional description</h3><br>
-Cornelius ekai is a programmer based both in software developer and website developer<br>
+   <p>
+ Cornelius ekai is a programmer based both in software developer and website developer<br>
 because of hardwork and doing alot of research i gain skills and found my self able to come up with several <br>website and software projects.
 Currently i have familiarized with other programming language such as;<em>css,json,C++,xml,php and java script</em>.<br>
 programming is wonderfull career one can be able to come up with programms and develop a website and also a software.
-</main>
+    </p>
 <!--footer section-->
 <div class="footer">
     <footer>
@@ -108,6 +108,5 @@ programming is wonderfull career one can be able to come up with programms and d
 
     </footer>
 </div>
-</html>
 </body>
 </html>
