--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Hello world! welcome to my website
             online chess game<br>
         </P>
 
-        <img src="networking.jpg" alt="" height="400px" width="300px">
+        <img src="networking.jpg" alt="" height="400" width="300">
 </article>
 
 
@@ -71,7 +71,7 @@ Hello world! welcome to my website
 
 
         <img src="IT.jpg" alt="cyber security essentials"
-        height="400px" width="600px">
+        height="400" width="600">
         
         
     </article>
@@ -83,7 +83,7 @@ Hello world! welcome to my website
             if?.......<br>
             what......
         </p>
-        <img src="" alt="" height="400px" width="300px">
+        <img src="" alt="" height="400" width="300">
 
     </article>
 
