--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <!--Navigation bar-->
     <nav class="navbar">
       
-       <a href="home.html"class="fas fa-home">home</a><br>
-       <a href="project.html"class="fas fa-tasks">project</a><br>
-       <a href="services.html"class="fab fa-servicestack">services</a><br>
-       <a href="about.html"class="fas fa-address-card">about</a><br>
-       <a href="blog.html"class="fas fa-blog">blog</a><br>
-       <a href="contact.html"class="far fa-address-book">contact</a>
-       <a href="resume.hmtl "class="fas fa-file">resume</a>
+       <a href="home.html" class="fas fa-home">home</a><br>
+       <a href="project.html" class="fas fa-tasks">project</a><br>
+       <a href="services.html" class="fab fa-servicestack">services</a><br>
+       <a href="about.html" class="fas fa-address-card">about</a><br>
+       <a href="blog.html" class="fas fa-blog">blog</a><br>
+       <a href="contact.html" class="far fa-address-book">contact</a>
+       <a href="resume.hmtl " class="fas fa-file">resume</a>
     </nav>
 <!--hero section--> 
 <hr>
@@ -83,7 +83,7 @@ Hello world! welcome to my website
             if?.......<br>
             what......
         </p>
-        <img src="" alt="" height="400" width="300">
+        <img src="download.jpg" alt="" height="400" width="300">
 
     </article>
 
