--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
             <br>
             <br>
 
-            <label for="subscription">Subscribe to news and offers</label>
+            <label for="subscription">Subscribe to more news and offers</label>
             <input type="checkbox" name="">
             <br>
             <br>
