--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                 <td>microsoft acces</td>
             </tr>
             <tr>
-                <td>java</td>
+                <td>java/javascript</td>
                 <td>html</td>
                 <td>css</td>
             </tr>
