--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,4 @@
-<!--
+!--
     author: cornelius ekai
     project: personal portfolio
     license: MIT 
@@ -28,7 +28,7 @@
         <a href="resume.hmtl "i class="fas fa-file">resume</a>
     </nav>
 
-    the following is my resume : <a href="https://rxresu.me/app/builder/zqra5k">resume</a>
+    the following is my resume : <a href="https://www.jobseeker.com/app/resumes/39fd7e67-062c-4c3f-8afd-6e2f082f5819/edit?action=download_document_editor_39fd7e67-062c-4c3f-8afd-6e2f082f5819&fullscreenPreview=1">resume</a>
 
      <!--footer section-->
         <div class="footer">
