--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </nav>
 <!--hero section--> 
 <hr>
-<img src="download.jpg" alt="" width="300" height="300">
+<img src="conn.png" alt="" width="300" height="300">
 <p>
 Hello world! welcome to my website
 </p>
@@ -57,7 +57,7 @@ Hello world! welcome to my website
             online chess game<br>
         </P>
 
-        <img src="networking.jpg" alt="" height="400" width="300">
+        <img src="lib.jpg" alt="" height="400" width="300">
 </article>
 
 
@@ -70,7 +70,7 @@ Hello world! welcome to my website
             </p>
 
 
-        <img src="IT.jpg" alt="cyber security essentials"
+        <img src="testimonials.jpg" alt="cyber security essentials"
         height="400" width="600">
         
         
@@ -83,7 +83,7 @@ Hello world! welcome to my website
             if?.......<br>
             what......
         </p>
-        <img src="download.jpg" alt="" height="400" width="300">
+        <img src="faqs.jpg" alt="" height="400" width="300">
 
     </article>
 
