--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,4 @@
-!--
+<!--
     author: cornelius ekai
     project: personal portfolio
     license: MIT 
@@ -11,14 +11,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/34cd652825.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/resume.css">
     <title>RESUME</title>
+    <link rel="stylesheet" href="css/resume.css">
+    <script src="https://kit.fontawesome.com/34cd652825.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--NAVIGATION BAR-->
-    <nav class="navbar">
-        <a href=""></a>
+    <nav id="nav-bar">
        <a href="home.html"class="fas fa-home"><stron>home</stron></a><br>
        <i><a href="proect.html"i class="fas fa-tasks">project</i></a><br>
        <a href="services.html"i class="fab fa-servicestack">services</a><br>
